--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+environs
 altgraph==0.16.1
 future==0.18.2
 pefile==2019.4.18
-PyInstaller==4.0.dev0+3d331fda4d
+PyInstaller==3.6
 PyQt5==5.14.1
 PyQt5-sip==12.7.0
 pywin32-ctypes==0.2.0
