--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Get tagName
+      uses: olegtarasov/get-tag@v2
+      id: tagName
+      with:
+        tagRegex: "v(.*)"  # Optional. Returns specified group text as tag name. Full tag string is returned if regex is not defined.
+        tagRegexGroup: 1 # Optional. Default is 1.
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -38,10 +44,9 @@ jobs:
       run: |
         curl -SL "http://files.jrsoftware.org/is/6/innosetup-6.0.5.exe" -o iscc-setup.exe
         .\iscc-setup.exe /SP- /VERYSILENT /ALLUSERS /SUPPRESSMSGBOXES
-    - name: Create Win Setup package
+    - name: Create Windows Setup package
       run: |
-        & "C:\Program Files (x86)\Inno Setup 6\ISCC.EXE" .\setup\setup.iss
-        ls .\setup\
+        & "C:\Program Files (x86)\Inno Setup 6\ISCC.EXE" .\setup\setup.iss /DVersion=${{ steps.tagName.outputs.tag }}
     - name: Make Release
       uses: softprops/action-gh-release@v1
       with:
