--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
   # This workflow contains a single job called "greet"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       matrix:
         python-version: [3.8]
@@ -47,11 +47,21 @@ jobs:
     - name: Create Windows Setup package
       run: |
         & "C:\Program Files (x86)\Inno Setup 6\ISCC.EXE" .\setup\setup.iss /DVersion=${{ steps.tagName.outputs.tag }}
+        ls .\setup\output
+        [System.Text.Encoding]::Default
+    - name: Install Zip archive
+      run: |
+        curl -SL "https://www.7-zip.org/a/7z2002-x64.exe" -o 7z2002-x64.exe
+        .\7z2002-x64.exe /SP- /VERYSILENT /ALLUSERS /SUPPRESSMSGBOXES
+    - name: Install Zip manager
+      run: |
+        & "C:\Program Files\7-Zip\7z.exe" a .\setup\output\dcug-setup-${{ steps.tagName.outputs.tag }}.zip .\setup\output\*
     - name: Make Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          .\setup\output\dcug-setup.exe
+          .\setup\output\dcug-setup-${{ steps.tagName.outputs.tag }}.exe
+          .\setup\output\dcug-setup-${{ steps.tagName.outputs.tag }}.zip
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
